2010-07-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/kernel32.def: Regenerate using gendef.

2010-07-20  Ozkan Sezer  <sezero@users.sourceforge.net>

	* include/commctrl.h (LVIF_GROUPID): Fix definition.

2010-07-20  Michael James  <james.me@gmail.com>

	* include/commctrl.h (LVIF_COLUMNS): Fix definition.

2010-07-17  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winnt.h (HEAP_MAKE_TAG_FLAGS, VALID_INHERIT_FLAGS): Correct
	definition.
	* include/rpcndr.h (NdrUnMarshConfStringHdr, NdrUnMarshCCtxtHdl,
	NdrMarshSCtxtHdl): Ditto.
	* include/basetyps.h (REFGUID, REFIID, REFCLSID, REFFMTID): Remove macro
	definition in favour of typedef definition.

	Thank you to Yuta Tomino for reporting the issues.

2010-07-08  Markus Koenig  <basilo@users.sourceforge.net>

	* include/gdiplus.h: New file.
	* include/gdiplus/gdiplus.h: New file.
	* include/gdiplus/gdiplusbase.h: New file.
	* include/gdiplus/gdiplusbrush.h: New file.
	* include/gdiplus/gdipluscolor.h: New file.
	* include/gdiplus/gdipluscolormatrix.h: New file.
	* include/gdiplus/gdipluseffects.h: New file.
	* include/gdiplus/gdiplusenums.h: New file.
	* include/gdiplus/gdiplusflat.h: New file.
	* include/gdiplus/gdiplusgpstubs.h: New file.
	* include/gdiplus/gdiplusgraphics.h: New file.
	* include/gdiplus/gdiplusheaders.h: New file.
	* include/gdiplus/gdiplusimageattributes.h: New file.
	* include/gdiplus/gdiplusimagecodec.h: New file.
	* include/gdiplus/gdiplusimaging.h: New file.
	* include/gdiplus/gdiplusimpl.h: New file.
	* include/gdiplus/gdiplusinit.h: New file.
	* include/gdiplus/gdipluslinecaps.h: New file.
	* include/gdiplus/gdiplusmatrix.h: New file.
	* include/gdiplus/gdiplusmem.h: New file.
	* include/gdiplus/gdiplusmetafile.h: New file.
	* include/gdiplus/gdiplusmetaheader.h: New file.
	* include/gdiplus/gdipluspath.h: New file.
	* include/gdiplus/gdipluspen.h: New file.
	* include/gdiplus/gdipluspixelformats.h: New file.
	* include/gdiplus/gdiplusstringformat.h: New file.